# rspleeter

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
doc/: build_ffmpeg_dylib_manually.md
src/: decode.rs  encode.rs  main.rs  splitter.rs  utils.rs
xtask/: Cargo.toml
xtask/src/: main.rs
