[package]
name = "rspleeter"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "xtask",
]

[dependencies]
anyhow = "1.0.57"
camino = "1.0.9"
cstr = "0.2.10"
once_cell = { version = "1.12.0", features = ["parking_lot"] }
rsmpeg =  { version = "0.17", features = ["ffmpeg7"] }
# For prebuilt macos aarch64 ffmpeg support
tensorflow = { git = "https://github.com/tensorflow/rust", rev = "1ddf5a348037402f87d67c076bf3019857eae05f" }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
supports-color = "1"
clap = { version = "3.1.18", features = ["derive"] }
