[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
camino = "1.0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
supports-color = "1"
